--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
   <div>
     <h1>Hey What's Up</h1>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit nulla repudiandae illum distinctio cupiditate blanditiis maxime odit ex, hic, magnam culpa sit, velit saepe ut pariatur odio minima. Est, dolor.</p>
+    <p>Lorem ipsum dolor sit amet const</p
+      >
+    <p>Lorem ipsum dolor sit amet const</p>
 
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit nulla repudiandae illum distinctio cupiditate blanditiis maxime odit ex, hic, magnam culpa sit, velit saepe ut pariatur odio minima. Est, dolor.</p>
+    
   </div>
 </body>
 </html>
